--- a/index.html/style.css
+++ b/index.html/style.css
@@ -1,3 +1,23 @@
+.nav {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+}
+
+.nav li {
+    margin-right: 20px;
+}
+
+.nav a {
+    text-decoration: dashed;
+    color: blueviolet;
+}
+
+.nav a:hover {
+    color: red;
+}
+
 body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: bisque;
@@ -16,6 +36,8 @@ h2 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
+/*
 .box {
     width: 300px;
     height: 300px;
@@ -26,4 +48,4 @@ h2 {
     font-size: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 100;
-}
+} */
